tests/reject/proof_without_qed.alg
sort S : Sort;
op a : → S;
lemma l a = a;
proof
  goal
    ⊢ a = a
